# R2DTU-Attention

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  r2dtu.toml  things-i-wish-i-had-known.md
Debug_Output/: Graph.dot  Graph_simple.dot
Pepper_Planner/Pepper_Planner/: State.cpp
cmake/: field.cmake  naoqi_toolchain.cmake  onboard.cmake
data/: face_1.json  face_2.json  people.json  prepare_faces.py
data/domains/: block-search-1.maepl  fb-synth.maepl
del/: README.md
del/include/del/: domain.hpp
del/src/: main.cpp
del/src/del/: domain.cpp
depend/: face_recognition_model.hpp
include/acting/: Trajectory.h
include/asr/: ASR.h
include/behaviour/: Behaviour.h
include/common/: Color.h  Debug.h  HardwareMonitoring.h  Message.h  Option.h  RingBuffer.h  RobotDefs.h  SubscriptionHandler.h  Timer.h  Vectors.h
include/core/: KVStore.h  MPSCQueue.h  Module.h  ModuleLoader.h  Network.h  Node.h  RingBuffer.h  Types.h
include/l10n/: FBT.h
include/msgs/: ActingMsgs.h  ActuationMsgs.h  AudioMsgs.h  CameraMsgs.h  ControlMsgs.h  CoreMsgs.h  MsgsStart.h  NaoMsgs.h  PerceptionMsgs.h  ProprioceptiveMsgs.h  ReasoningMsgs.h  TestMsgs.h
include/perception/: percept.h
include/reasoning/: EpistemicReasoning.h  WorldModel.h
resources/animations/Novo/Novo/Talk_1/: behavior.xar
resources/animations/Novo/Novo/Talk_10/: behavior.xar
resources/animations/Novo/Novo/Talk_11/: behavior.xar
resources/animations/Novo/Novo/Talk_12/: behavior.xar
resources/animations/Novo/Novo/Talk_14/: behavior.xar
resources/animations/Novo/Novo/Talk_16/: behavior.xar
resources/animations/Novo/Novo/Talk_2/: behavior.xar
resources/animations/Novo/Novo/Talk_3/: behavior.xar
resources/animations/Novo/Talk_1/: behavior.xar
resources/animations/Novo/Talk_10/: behavior.xar
resources/animations/Novo/Talk_11/: behavior.xar
resources/animations/Novo/Talk_12/: behavior.xar
resources/animations/Novo/Talk_2/: behavior.xar
resources/animations/Novo/Talk_3/: behavior.xar
resources/animations/Novo/Talk_4/: behavior.xar
resources/animations/Novo/Talk_5/: behavior.xar
resources/animations/Novo/Talk_6/: behavior.xar
resources/animations/Novo/Talk_7/: behavior.xar
resources/animations/Novo/Talk_8/: behavior.xar
resources/scripts/: dtu-open.json  forsk.json  novo.json
scripts/: bootstrap  deploy  docker_build  docker_install  docker_start  setup  test
src/: core_test_runner.cpp  field_runner.cpp  module_template.cpp  onboard_runner.cpp
src/asr/: DanishASR.cpp  EnglishASR.cpp  cloudspeech.py  danspeech.py  google_speech.py  listen.py  wtf
src/behaviour/: behaviour.cpp
src/common/: CMakeLists.txt  Message.cpp  Timer.cpp
src/core/: CMakeLists.txt  KVStore.cpp  ModuleLoader.cpp  Network.cpp  Node.cpp  TestMod.cpp
src/executor/: .robot.h.swp  CMakeLists.txt  EntityHeadTracker.cpp  EntityHeadTracker.h  executor.cpp  robot.h  state.h
src/executor/states/: Calibration.cpp  Calibration.h  Greet.cpp  Greet.h  Observing.cpp  Observing.h  Waiting.h
src/mockbot/: CMakeLists.txt  MockBotPlayer.cpp  MockBotRecorder.cpp
src/ocs/: CMakeLists.txt  CameraView.cpp  CameraView.h  EmptyView.cpp  EmptyView.h  FalseBeliefView.cpp  FalseBeliefView.h  OperatorControlStation.cpp  ScriptRunner.cpp  ScriptRunner.h  ScriptRunnerView.cpp  ScriptRunnerView.h  TelemetryView.cpp  TelemetryView.h  TerminalView.cpp  TerminalView.h
src/ocs/ui/: Audio.cpp  Audio.h  GamepadInput.cpp  GamepadInput.h  RenderContext.cpp  RenderContext.h  TopBar.cpp  TopBar.h  View.cpp  View.h  Window.cpp  Window.h
src/onboard_cameras/: CMakeLists.txt  Cameras.cpp  OV5640.cpp  OV5640.h
src/onboard_nao/: CMakeLists.txt  nao.cpp
src/perception/: CMakeLists.txt  Perception.cpp  Perception.h
src/perception/detectors/: face_analysis.cpp  face_analysis.h  face_detection.cpp  face_detection.h  marker_detection.cpp  marker_detection.h  object_detection.cpp  object_detection.h  skeleton_detection.cpp  skeleton_detection.h
src/perception/person/: person_async.cpp  person_async.h  person_tracker.cpp  person_tracker.h
src/perception/sensors/: LocalSensor.cpp  LocalSensor.h  Realsense.cpp  Realsense.h  StreamSensor.cpp  StreamSensor.h
src/reasoning/: EpistemicReasoning.cpp  WorldModel.cpp
src/zx-naoqi/: Cargo.toml
src/zx-naoqi/.cargo/: config
src/zx-naoqi/naoqi-ipc/: Cargo.toml
src/zx-naoqi/naoqi-ipc/src/: lib.rs  messages.rs
src/zx-naoqi/naoqi-plugin/src/: naoqi.cpp  naoqi.h
src/zx-naoqi/src/: main.rs
testing/unit/: CMakeLists.txt  EpistemicReasoningTests.cpp
(+6 files in other folders)
